# fossable

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs  raster.sh  shell.nix
.github/workflows/: build.yml  dist.yml
emblems/: README.md
keys/: root@fossable.org
src/: emblem.rs  emblem_svg.rs  imagery.rs  lib.rs  main.rs  signing.rs  svg.rs  words.rs
src/imagery/: gantry.rs  goldboot.rs  lib.rs  sandpolis.rs  turbine.rs
src/projects/: mod.rs  sandpolis.rs
