[package]
authors = ["Tyler Cook"]
description = "Contains official imagery and digital provenance for all fossable projects"
edition = "2021"
homepage = "https://fossable.org"
license-file = "LICENSE.md"
name = "fossable"
version = "0.1.2"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.8", features = ["derive"] }
pgp = "0.11.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version="1", features = ["derive"] }
