[package]
authors = ["Tyler Cook"]
description = "Contains official imagery and digital provenance for all fossable projects"
edition = "2021"
homepage = "https://fossable.org"
license-file = "LICENSE.md"
name = "fossable"
version = "0.1.2"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
pgp = { version = "0.11.0", optional = true }

[build-dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
resvg = "0.45.0"
usvg = "0.45.0"

[features]
# Verify artifact signatures
verify = ["dep:pgp"]

# Generate graphics in the build script
build-graphics = []

# Each project can be enabled individually
project-sandpolis = []
project-goldboot = []
project-gantry = []
project-turbine = []
project-outpost = []
