[package]
authors = ["Tyler Cook"]
description = "Contains official imagery and digital provenance for all fossable projects"
edition = "2021"
homepage = "https://fossable.org"
license-file = "LICENSE.md"
name = "fossable"
version = "0.1.2"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
pgp = { version = "0.11.0", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
resvg = { version = "0.45.0", optional = true }
usvg = { version = "0.45.0", optional = true }

[features]
# Verify artifact signatures
verify = ["dep:pgp"]

# Generate graphics via the build-graphics subcommand
build-graphics = ["dep:quick-xml", "dep:serde", "dep:resvg", "dep:usvg"]

# Each project can be enabled individually
project-sandpolis = []
project-goldboot = []
project-gantry = []
project-turbine = []
project-outpost = []
project-workset = []
project-common-ci = []
project-fossdb = []
